raport z ról + coś więcej o anonimizacji

--- a/dokumentacja/rso.tex
+++ b/dokumentacja/rso.tex
@@ -205,6 +205,7 @@ framerule=0.1pt,
 \input {tex/repo}
 \input {tex/spotkania}
 \input {tex/tools}
+\input {tex/raport}
 \end{appendices}
 
 \end{document}
